cargo-features = ["strip"]

[package]
name = "dinkleberg"
version = "0.0.1"
edition = "2018"
authors = ["oSumAtrIX <johan.melkonyan1@web.de>"]
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.10.9", default-features = false, features = ["rustls_backend", "cache", "client", "gateway" , "model"] }

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "dinkleberg.exe"
FileDescription = "Exploiting discords fake offline presence"
ProductName = "Dinkleberg"
ProductVersion = "0.0.1"