cargo-features = ["strip"]

[package]
name = "dinkleberg"
version = "0.4.4"
edition = "2021"
authors = ["oSumAtrIX <johan.melkonyan1@web.de>"]
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest =  { version = "0.11", features = ["json", "blocking"] }
colored = "2.0.0"
tokio = { version = "1.13.0", features =  ["full"] }
serenity = { version = "0.10.9", default-features = false, features = ["rustls_backend", "client", "gateway" , "model"] }
proctitle = "0.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "dinkleberg.exe"
FileDescription = "Catch users faking their offline status on discord"
ProductName = "Dinkleberg"
ProductVersion = "0.4.4"
